# zero2prod

./: Cargo.toml  Dockerfile  NOTES.md  README.md  cookie
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231001012125_make_status_not_null_in_subscriptions.sql  20231001012406_create_subscriptions_tokens_table.sql  20231007005628_delete_subscriptions_table.sql  20231007005729_create_subscription_token_table.sql  20231021002422_seed_user.sql  20231021011231_delete_seed_user.sql  20231021011459_add_seed_user_again.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
