[package]
name = "zero2prod"
version = "0.1.0"
authors = ["rcyl <raymondchuayitlong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"

[dev-dependencies]
reqwest = "0.11"